--- a/panel/install
+++ b/panel/install
@@ -146,7 +146,7 @@ clear
 #
 echo -e "           \033[1;33m● \033[1;32mFINALIZING INSTALLATION, IT MAY TAKE \033[1;33m● \033[1;33mWAIT...\033[0m"
 cd /var/www/html
-wget https://raw.githubusercontent.com/-/PAINEL.zip > /dev/null 2>&1
+wget https://raw.githubusercontent.com/Thanatad/ssh-panel-php/panel/PAINEL.zip > /dev/null 2>&1
 sleep 1
 unzip PAINEL.zip > /dev/null 2>&1
 rm -rf PAINEL.zip index.html > /dev/null 2>&1
@@ -157,7 +157,7 @@ sed -i "s;1010;$senha;g" /var/www/html/pages/system/pass.php > /dev/null 2>&1
 fi
 sleep 1
 cd
-wget https://raw.githubusercontent.com/-/Panel.sql > /dev/null 2>&1
+wget https://raw.githubusercontent.com/Thanatad/ssh-panel-php/panel/Panel.sql > /dev/null 2>&1
 sleep 1
 if [[ -e "$HOME/Panel.sql" ]]; then
     mysql -h localhost -u root -p$senha --default_character_set utf8 sshplus < Panel.sql
@@ -184,7 +184,7 @@ echo '*/2 * * * * root /bin/autobackup.sh' >> /etc/crontab
 /etc/init.d/cron restart > /dev/null 2>&1
 cd /bin
 rm autobackup.sh > /dev/null 2>&1
-wget https://raw.githubusercontent.com/-/autobackup.sh > /dev/null 2>&1 && chmod 777 autobackup.sh && sed -i -e 's/\r$//' autobackup.sh && ./autobackup.sh
+wget https://raw.githubusercontent.com/Thanatad/ssh-panel-php/panel/autobackup.sh > /dev/null 2>&1 && chmod 777 autobackup.sh && sed -i -e 's/\r$//' autobackup.sh && ./autobackup.sh
 # echo '0 */12 * * * root cd /var/www/html/pages/system/ && bash cron.backup.sh && cd /root' >> /etc/crontab
 # echo '5 */12 * * * root cd /var/www/html/pages/system/ && /usr/bin/php cron.backup.php && cd /root' >> /etc/crontab
 /etc/init.d/cron reload > /dev/null 2>&1
