--- a/panel/install
+++ b/panel/install
@@ -96,7 +96,7 @@ echo "phpmyadmin phpmyadmin/mysql/admin-pass password $senha" | debconf-set-sele
 echo "phpmyadmin phpmyadmin/mysql/app-pass password $senha" | debconf-set-selections
 echo "phpmyadmin phpmyadmin/reconfigure-webserver multiselect apache2" | debconf-set-selections
 fun_phpmya () {
-apt-get install phpmyadmin -y > /dev/null 2>&1
+apt-get install php-ssh2 phpmyadmin -y > /dev/null 2>&1
 }
 fun_bar 'fun_phpmya'
 php5enmod mcrypt > /dev/null 2>&1
@@ -106,7 +106,7 @@ echo ""
 #
 echo -e "           \033[1;33m● \033[1;32mINSTALLING THE LIBSSH2 \033[1;33m●\033[0m"
 fun_libsh2 () {
-apt-get install libssh2-1-dev libssh2-php php-ssh2 -y > /dev/null 2>&1
+apt-get install libssh2-1-dev libssh2-php -y > /dev/null 2>&1
 }
 fun_bar 'fun_libsh2'
 
