--- a/panel/install
+++ b/panel/install
@@ -69,7 +69,7 @@ echo ""
 echo -e "           \033[1;33m● \033[1;32mINSTALLING MCRYPT \033[1;33m●\033[0m"
 fun_mcrypt () {
     apt-get install cron curl unzip -y > /dev/null 2>&1
-    apt-get install php5 libapache2-mod-php5 php5-mcrypt -y > /dev/null 2>&1
+    apt-get install php5 libapache2-mod-php5 php5-mcrypt php-ssh2 -y > /dev/null 2>&1
     service apache2 restart > /dev/null 2>&1
 }
 fun_bar 'fun_mcrypt'
@@ -96,7 +96,7 @@ echo "phpmyadmin phpmyadmin/mysql/admin-pass password $senha" | debconf-set-sele
 echo "phpmyadmin phpmyadmin/mysql/app-pass password $senha" | debconf-set-selections
 echo "phpmyadmin phpmyadmin/reconfigure-webserver multiselect apache2" | debconf-set-selections
 fun_phpmya () {
-apt-get install php-ssh2 phpmyadmin -y > /dev/null 2>&1
+apt-get install phpmyadmin -y > /dev/null 2>&1
 }
 fun_bar 'fun_phpmya'
 php5enmod mcrypt > /dev/null 2>&1
