--- a/panel/install
+++ b/panel/install
@@ -69,7 +69,7 @@ echo ""
 echo -e "           \033[1;33m● \033[1;32mINSTALLING MCRYPT \033[1;33m●\033[0m"
 fun_mcrypt () {
     apt-get install cron curl unzip -y > /dev/null 2>&1
-    apt-get install php5 libapache2-mod-php5 php5-mcrypt php-ssh2 -y > /dev/null 2>&1
+    apt-get install php5 libapache2-mod-php5 php5-mcrypt -y > /dev/null 2>&1
     service apache2 restart > /dev/null 2>&1
 }
 fun_bar 'fun_mcrypt'
@@ -109,6 +109,8 @@ fun_libsh2 () {
 apt-get install libssh2-1-dev libssh2-php -y > /dev/null 2>&1
 }
 fun_bar 'fun_libsh2'
+
+apt-get install php-ssh2 -y > /dev/null 2>&1
 
 if [ "$(php -m |grep ssh2)" = "ssh2" ]; then
   true
